gcp/kubernetes/scripts/nginx/working-http-ingress/the3dsoft-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "the3dsoft-ingress"
spec:
  rules:
  - host: the3dsoft.com
    http:
      paths:
      - path: /test/
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /
        backend:
          serviceName: wmsui
          servicePort: 80
